--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1,10 +1,3 @@
-/*!
- * Bootstrap v3.1.1 (http://getbootstrap.com)
- * Copyright 2011-2014 Twitter, Inc.
- * Licensed under MIT (https://col-md-3ithub.com/twbs/bootstrap/blob/master/LICENSE)
- */
-
-/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -1238,6 +1231,9 @@ pre code {
   }
   .col-md-offset-1 {
     margin-left: 8.33333333%;
+  }
+  .col-md-offset-m {
+    margin-left: 24%;
   }
   .col-md-offset-0 {
     margin-left: 0;
@@ -5779,4 +5775,3 @@ button.close {
     display: none !important;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map */
