--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,13 @@ p {
 
 .color-red {
     color:#000000;
+    padding: 10px;
+    margin: 0;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border-radius: 6px 6px 0 0;
+    position: relative;
 }
 
 .color-green {
@@ -148,13 +155,13 @@ p {
    ========================================================================== */
 
 #header-section {
-	background: url(../img/home-btp.png) no-repeat center top;
-	margin-top: -20px;
-	padding-top:20px;
-	text-align:center;
-	background-position: center center;
-	min-height: 700px;
-	width: 100%;	
+  	background: url(../img/bg-web.png) no-repeat center top;
+  	margin-top: -20px;
+  	padding-top: 20px;
+  	text-align: center;
+  	background-position: center center;
+  	height: auto;
+  	width: auto;	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -164,6 +171,7 @@ p {
     -o-background-size: cover;
     background-size: cover;
 }
+
 
 #header-section h1 {
 	margin-top: 120px;
@@ -185,6 +193,9 @@ p {
     font-weight:900;
     margin-top: 600px; 
 }
+
+
+
 /* ==========================================================================
    ABOUT SECTION
    ========================================================================== */
@@ -240,6 +251,33 @@ background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #c
   width: calc(var(--insta-icon-size)/4);
   height: calc(var(--insta-icon-size)/4);
   border-radius: 50%
+}
+
+/* YOUTUBE */
+
+.video-container {
+  position:relative;
+  padding-bottom:56.25%;
+  padding-top:30px;
+  height:0;
+  overflow:hidden;
+
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
+
+/* CAROUSEL ELEMENTS */
+.full-screen {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  
 }
 
 /* ===========================================================
